tests/negative/Test17.sp
(* Testing arrays *)
max:Int(a:[Int]){
	c:Int = a[i];
	return 2;
}